--- a/solutions/endusermgmt_azure_aad/index.asciidoc
+++ b/solutions/endusermgmt_azure_aad/index.asciidoc
@@ -7,10 +7,10 @@ toc::[]
 :idprefix:
 :idseparator: -
 
-== Enduser Management Solution Azure Active Directory (=AAD)
-=== Overview AAD
+== Enduser Management Solution Azure Active Directory
+=== Overview Azure Active Directory
 
-The central control instance for all users within Azure is Azure Active Directory (=AAD). Three features within AAD are related to user management which are as follows. Using them means factoring out enduser management into a separate service:
+The central control instance for all users within Azure is Azure Active Directory (AAD). It comes with the following features/ services that can be sued for enduser management:
 
 * AAD Business to Customer (B2C)
 +
@@ -22,13 +22,8 @@ This feature started with the idea to cover endusers of an application. The feat
 --
 This feature started with the idea to give external users access to Azure resources in an existing tenant. The external are modeled as guest users in AAD. This feature can be also used for modeling endusers especially if the same tenant is not problematic. A big advantage is that problems related to the separate B2C tenant are not relevant such as provisioning.
 --
-* External Identities
-+
---
-Currently it refers to two things: (1) the new umbrella term unifying the so far separate B2B/ B2C features and (2) additional features that were added to AAD B2B.
---
 
-Currently there is a lot of movement in these AAD features. Before External Identities Microsoft was already porting features from B2C to B2B. External Identities marks the shift towards even more integration between the two. According to this source this might mean a unified service offering that combines the B2B and B2C features.
+Currently there is a lot of movement in this area. Microsoft was already porting features from B2C to B2B. The new external identities marks the shift towards even more integration between the two. Currently it refers to two things: (1) the new umbrella term unifying the so far separate B2B/ B2C features and (2) additional features that were added to AAD B2B. According to https://www.microsoftpartnercommunity.com/atvwr79957/attachments/atvwr79957/UK_Area_db/387/2/External%20Identities.pdf[this source] this might mean a unified service offering that combines the B2B and B2C features.
 According to feedback from the microsoft product group it probably does not mean a a new separate service that unifies the existing B2B and B2C. The majority is voting for creatin an option within AAD B2B to group the users in a logical container within a tenant. The current hassle could be then avoided that comes with the different B2C one.
 
 === Enduser Mgmt Application Level
@@ -46,7 +41,7 @@ Applications need to be registered for usage within Azure B2C and B2B. App regis
 * AAD User Management feature
 +
 --
-All three features from above (B2B/ B2C/ Ext. Identities) can be possible. Crucial questions are:
+AAD B2B and B2C can be possible to manage end users. Crucial questions are:
 
 ** Is it a problem to store the application users with others in the same tenant? (Since you might have a mixture of corporate and non corporate users)
 ** Does the separate tenant cause problems? (E.g. because you want to use custom policies which results causes problems regarding https://docs.microsoft.com/en-us/azure/active-directory-b2c/deploy-custom-policies-devops[provisioning])
