--- a/solutions/microsvc_platforms_azure_aks/index.asciidoc
+++ b/solutions/microsvc_platforms_azure_aks/index.asciidoc
@@ -103,8 +103,8 @@ Tools for accessing sensitive information:
 
 Tools for synchronizing configuration:
 
-** ArgoCD: Continuous Delivery for Kubernetes: ArgoCD is a leader developed by Intuit and synchronizes changes in the code of applications, photos and cluster definitions, so the Git - repository, to the cluster. The solution is open source software, kept relatively simple and is one of the most important and oldest tools on the market.
-** Flux: Integration of Flux CD into the workflow: Flux basically does the same job as ArgoCD, i.e. synchronizes the repository and cluster in the course of continuous delivery. Flux is also open source and kept simple - the special thing: It comes from the GitOps inventor Weaveworks.
+** *ArgoCD:* ArgoCD is a leader developed by Intuit and synchronizes changes in the code of applications, photos and cluster definitions, so the Git - repository, to the cluster. The solution is open source software, kept relatively simple and is one of the most important and oldest tools on the market.
+** *Flux:* Flux basically does the same job as ArgoCD, i.e. synchronizes the repository and cluster in the course of continuous delivery. Flux is also open source and kept simple - the special thing: It comes from the GitOps inventor Weaveworks.
 --
 
 === When to use
@@ -125,17 +125,21 @@ Each Pod is meant to run a single instance of a given application. If you want t
 
 The "one-container-per-Pod" model is the most common Kubernetes use case. A more advanced use case is running multiple containers in a pod that need to work together. A Pod can encapsulate an application composed of multiple co-located containers that are tightly coupled and need to share resources. These co-located containers form a single cohesive unit of service - for example, one container serving data stored in a shared volume to the public, while a separate sidecar container refreshes or updates those files. The Pod wraps these containers, storage resources, and an ephemeral network identity together as a single unit.
 
-Containers have to store information persistently. https://docs.microsoft.com/en-us/azure/aks/concepts-storage[Azure] provides Azure (managed) disks and Azure files as storage options.
+Containers have to store information persistently. https://docs.microsoft.com/en-us/azure/aks/concepts-storage[Azure] provides Azure (managed) disks and Azure files as storage options for persistent volumes.
+AKS can connect with databases via wrapper objects such as Services  or databases can be directly deployed to Kubernetes. Options for deplyong a database directly to Kubernetes are given below:
+
+** SQL server (Microsoft): Options range from single https://docs.microsoft.com/en-us/sql/linux/tutorial-sql-server-containers-kubernetes?view=sql-server-ver15[sql server] to https://docs.microsoft.com/en-us/sql/linux/tutorial-sql-server-containers-kubernetes-dh2i?view=sql-server-ver15[high availability] with failover groups. In both cases MS provides containers that contain sql server.
+** Third party options such as https://portworx.com/blog/ha-postgresql-azure-aks/[PostgreSQL]
 --
 * Configuration
 +
 --
-Configmaps are useful to store non-critical data in key-value pair format. They can also be used to inject env vars into pods. Secrets are useful to store sensitive data in key value pair format. They can also be used to inject env vars into pods. You can optionally specify how much of each resource a Container needs. The most common resources to specify are CPU and memory (RAM).
+Configmaps are useful to store non-critical data in key-value pair format. They can also be used to inject env vars into pods. Secrets are useful to store sensitive data in key value pair format. They can also be used to inject env vars into pods. You can optionally specify how much of each resource a container needs. The most common resources to specify are CPU and memory (RAM).
 --
 * Security
 +
 --
-A https://kubernetes.io/docs/tasks/configure-pod-container/security-context/[security context] defines privilege and access control settings for a Pod. Examples are: 
+A https://kubernetes.io/docs/tasks/configure-pod-container/security-context/[security context] defines privilege and access control settings for a pod. Examples are: 
 
 ** Discretionary Access Control: Permission to access an object, like a file, is based on user ID (UID) and group ID (GID).
 ** Security Enhanced Linux (SELinux): Objects are assigned security labels.
@@ -146,12 +150,15 @@ A https://kubernetes.io/docs/tasks/configure-pod-container/security-context/[sec
 ** readOnlyRootFilesystem: Mounts the container's root filesystem as read-only.
 
 Disks used in your AKS cluster can by encrypted by using your own keys through Azure Key Vault.
+
+See building for additional security measures when containers are built.
 --
 * Building (CI part of provisioning)
 +
 --
 Building containers includes the following steps:
-1. Buiding the container image(s)
+
+1. Building the container image(s)
 2. Pushing the image(s) to the registry
 
 Provisioning tools such as Azure DevOps and Gitub Actions provide special docker tasks/ activities to build images. Pushing to registries is also supported. The following additional features can be used/ should be considered from security perspective:
