--- a/solutions/microsvc_platforms_azure_aks/index.asciidoc
+++ b/solutions/microsvc_platforms_azure_aks/index.asciidoc
@@ -245,4 +245,4 @@ See under infrastructure.
 
 === When to use
 
-When you want to deploy containerized applications to a platform with orchestration in Azure.
+When you want to deploy containerized applications to Azure Kubernetes Service.
